# cesm-helper-scripts

./: .gen_temp.py.swp  .gitignore  .mise.toml  .pre-commit-config.yaml  .temp_plots.py.swp  README.md  environment.yaml  environment.yml  gen_land  gen_temp.py  land_ice  makefile  ncdump  pyproject.toml  requirements.txt  scale_lat.py  setup.cfg  setup.py  temp_plots.py
.github/workflows/: constraints.txt  release.yml
conda.recipe/: meta.yaml
src/cesm_helper_scripts/: __init__.py  create_plots.py  gen_agg  gen_land  gen_temp  gen_temp.py  land_ice  myncdump  nc_to_np.py  ncdump  presets.py  remove_seasonal.py  temp_nc_to_np  temp_nc_to_np.py  temp_plots  temp_plots.py
src/cesm_helper_scripts/rewrite_variable/: c2imp.sh  set_date_var_nc.py
tests/: create_data.py  run_gen_agg.py  run_gen_agg.sh
