[tool.poetry]
name = "cesm-helper-scripts"
version = "0.4.1"
description = ""
authors = ["engeir <eirroleng@gmail.com>"]
license = "MIT"

[tool.poetry.scripts]
cplt = "cesm_helper_scripts.create_plots:main"
nc2np = "cesm_helper_scripts.nc_to_np:main"
remove-seasonal = "cesm_helper_scripts.remove_seasonal:remove_seasonal"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
rich = "^10.1.0"
matplotlib = "^3.4.1"
dask = "^2021.4.0"
nc-time-axis = "^1.2.0"
scipy = "^1.7.1"
cftime = "^1.5.0"
animatplot = "^0.4.2"
cosmoplots = "^0.1.5"
tqdm = "^4.63.1"
xarray = "^2022.3.0"
h5netcdf = "^1.0.2"
importlib-metadata = "^4.12.0"
basemap = "^1.3.6"
xmovie = "^0.3.1"
numpy = "^1.23.4"

[tool.poetry.dev-dependencies]
isort = "^5.8.0"
pre-commit = "^2.11.1"
darglint = "^1.8.0"
pyupgrade = "^2.11.0"
flake8 = "^3.9.0"
pre-commit-hooks = "^3.4.0"
pytest = "^7.2.0"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
