[project]
name = "cesm-helper-scripts"
version = "0.5.4"
description = ""
authors = [{ name = "engeir", email = "engeir@pm.me" }]
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = [
  "rich",
  "matplotlib",
  "dask",
  "nc-time-axis",
  "cftime",
  "animatplot",
  "cosmoplots",
  "tqdm",
  "xarray",
  "h5netcdf",
  "basemap",
  "xmovie",
  "numpy",
  "netcdf4",
]

[project.scripts]
cplt = "cesm_helper_scripts.create_plots:main"
nc2np = "cesm_helper_scripts.nc_to_np:main"
remove-seasonal = "cesm_helper_scripts.remove_seasonal:remove_seasonal"

[tool.uv]
dev-dependencies = [
  "isort>=5.13.2",
  "pre-commit>=3.8.0",
  "darglint>=1.8.1",
  "pyupgrade>=3.17.0",
  "flake8>=7.1.1",
  "pre-commit-hooks>=4.6.0",
  "pytest>=8.3.2",
  "black>=24.8.0",
]
